# pangeo-forge-cordex

./: README.md  setup.cfg
.github/workflows/: ci.yaml
pangeo_forge_cordex/: __init__.py  _version.py  catalog.py  esgf_access.py  parsing.py  recipe.py  utils.py
tests/: test_parsing.py  test_recipe_creation.py
