[metadata]
name = pangeo-forge-cordex
description = "Using queries to the ESGF API to generate urls and keyword arguments for receipe generation in pangeo-forge"
long_description = file:README.md
long_description_content_type = text/markdown
maintainer = Lars Buntemeyer
maintainer_email = lars.buntemeyer@hereon.de
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

url = https://github.com/jbusecke/pangeo-forge-esgf
license = MIT
keywords = pangeo, data, esgf

[options]
zip_safe = False
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
  aiohttp
  requests

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    # module level import not at top of file
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build
    docs
    .git

[isort]
profile = black
skip_gitignore = true
force_to_top = true
